Добавив перемінні для кольорів.

--- a/src/assets/sass/customs/_variables.scss
+++ b/src/assets/sass/customs/_variables.scss
@@ -1,3 +1,35 @@
-$white: #ffffff;
-$black: #000000;
-$main: 	#f8c99f;
+$white: #ffffff !default;
+$black: #000000 !default;
+$main: #1e90ff !default;
+$green-1: #185146 !default;
+$green-2: #238d78 !default;
+$green-3: #3dc5aa !default;
+$green-4: #9fd7bd !default;
+
+$colors: () !default;
+$colors: map-merge(
+				(
+						"white": $white,
+						"black": $black,
+						"main": $main,
+						"green-1": $green-1,
+						"green-2": $green-2,
+						"green-3": $green-3,
+						"green-4": $green-4,
+				),
+				$colors
+);
+
+$theme-colors: () !default;
+$theme-colors: map-merge(
+				(
+						"white": $white,
+						"black": $black,
+						"main": $main,
+						"green-1": $green-1,
+						"green-2": $green-2,
+						"green-3": $green-3,
+						"green-4": $green-4,
+				),
+				$theme-colors
+);
