--- a/src/assets/sass/customs/_reboot.scss
+++ b/src/assets/sass/customs/_reboot.scss
@@ -3,9 +3,9 @@
 body {
   position: relative;
   margin: 0;
-  font-family: 'ProximaNova-Regular', sans-serif;
-  font-size: 18px;
-  color: $white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: $black;
 }
 
 .container {
