--- a/src/assets/sass/customs/_titles.scss
+++ b/src/assets/sass/customs/_titles.scss
@@ -1,60 +1,8 @@
-.title-1 {
-	font-family: 'BehrensAntiqua', sans-serif;
-	font-size: 56px;
-}
-
-.title-2 {
-	font-family: 'BehrensAntiqua', sans-serif;
-	font-size: 48px;
-}
-
-.title-3 {
-	font-family: 'BehrensAntiqua', sans-serif;
-	font-size: 38px;
-}
-
-.text {
-	line-height: 2;
-}
-
-.text-center {
-	text-align: center;
-}
-
-.text-grey {
-	color: rgba($white,.3);
-}
-
-.logo {
-	display: flex;
-	align-items: center;
-}
-
-.logo__text {
-	font-family: 'BehrensAntiqua', sans-serif;
+.h1 {
+	position: relative;
+	display: inline-block;
+	font-weight: bold;
+	font-size: 50px;
+	text-transform: uppercase;
 	color: $main;
-}
-
-.mobile-logo {
-	display: none;
-}
-
-
-
-@media (max-width: 991.98px) {
-	.title-1 {
-		font-size: 28px;
-	}
-	.title-2 {
-		font-size: 28px;
-	}
-	.title-3 {
-		font-size: 28px;
-	}
-	.mobile-logo {
-		display: flex;
-	}
-	.desktop-logo {
-		display: none;
-	}
 }
