Добавив grid розмітку.

--- a/src/assets/sass/customs/_variables.scss
+++ b/src/assets/sass/customs/_variables.scss
@@ -33,3 +33,8 @@ $theme-colors: map-merge(
 				),
 				$theme-colors
 );
+
+.bg-age-1 {background-color: $age-1;}
+.bg-age-2 {background-color: $age-2;}
+.bg-age-3 {background-color: $age-3;}
+.bg-age-4 {background-color: $age-4;}
