--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -5,6 +5,7 @@ Table of contents
 ## Slick
 ## Customs
 ## Sidebar
+## Main
 *******************/
 
 
@@ -23,3 +24,7 @@ Table of contents
 /* ## Sidebar
 ====================*/
 @import "../../templates/sidebar/sidebar";
+
+/* ## Main
+====================*/
+@import "../../templates/main/main";
