--- a/src/templates/main/main.html
+++ b/src/templates/main/main.html
@@ -1,2 +1,88 @@
-<main class="main"></main>
+<main class="main">
+    <div class="chart">
+        <div class="chart__block chart__block-1">
+            <div class="chart__block_label">Услуги <span>(56 котировок)</span></div>
+            <div class="chart__block_grid chart__block_grid-1">
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+            </div>
+        </div>
+        <!-- /.chart__block -->
+        <div class="chart__block chart__block-2">
+            <div class="chart__block_label">HoReCa <span>(65 котировок)</span></div>
+            <div class="chart__block_grid chart__block_grid-2">
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+            </div>
+        </div>
+        <!-- /.chart__block -->
+        <div class="chart__block chart__block-3">
+            <div class="chart__block_label">Ретейл <span>(36 котировок)</span></div>
+            <div class="chart__block_grid chart__block_grid-3">
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+                <div class="chart__block_grid_item bg-age-4"></div>
+                <div class="chart__block_grid_item bg-age-3"></div>
+                <div class="chart__block_grid_item bg-age-1"></div>
+                <div class="chart__block_grid_item bg-age-2"></div>
+            </div>
+        </div>
+        <!-- /.chart__block -->
+    </div>
+    <!-- /.chart -->
+</main>
 <!-- /.main -->
