--- a/src/assets/sass/customs/customs.scss
+++ b/src/assets/sass/customs/customs.scss
@@ -14,3 +14,13 @@
 	padding-top: 30px;
 	border-top: 1px solid $main;
 }
+
+.banner {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 60px 0 80px;
+	width: 100%;
+	height: 180px;
+	cursor: pointer;
+}
