--- a/src/templates/main/main.html
+++ b/src/templates/main/main.html
@@ -1,4 +1,5 @@
 <main class="main">
+
     <div class="chart">
         <div class="chart__block chart__block-1">
             <div class="chart__block_label">Услуги <span>(56 котировок)</span></div>
@@ -84,5 +85,34 @@
         <!-- /.chart__block -->
     </div>
     <!-- /.chart -->
+
+    <div class="main__info">
+        <div class="main__info_left">
+            <div class="main__info_left_block">
+                <div class="main__info_left_block_item name">ИЛПТ</div>
+                <div class="main__info_left_block_item ratio">1034</div>
+            </div>
+            <div class="main__info_left_text">
+                <div class="main__info_label">Сокращенное название франшизы</div>
+                <div class="main__info_label">Сумарный коэффициент</div>
+            </div>
+        </div>
+        <div class="main__info_right">
+            <div class="main__info_label">Возраст франшизы в годах:</div>
+            <ul class="main__info_colors">
+                <li class="main__info_colors_item bg-age-4">5+</li>
+                <li class="main__info_colors_item bg-age-3">3-5</li>
+                <li class="main__info_colors_item bg-age-2">1-3</li>
+                <li class="main__info_colors_item bg-age-1">0-1</li>
+            </ul>
+        </div>
+    </div>
+    <!-- /.main__info -->
+
+    <div class="main__placing">
+        <a href="/" class="main__placing_btn">Размещение в котировке</a>
+    </div>
+    <!-- /.main__placing -->
+
 </main>
 <!-- /.main -->
