--- a/src/templates/main/main.scss
+++ b/src/templates/main/main.scss
@@ -348,3 +348,111 @@
 		}
 	}
 }
+
+.main__info {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	margin-bottom: 2em;
+	padding: 2em 0;
+	border-bottom: 1px solid $main;
+}
+
+.main__info_label {
+	padding: 7px 0;
+	font-size: 14px;
+}
+
+.main__info_left {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+}
+
+.main__info_left_block {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 135px;
+	height: 80px;
+	margin-right: 40px;
+	padding: 5px;
+	background-color: $age-3;
+}
+
+.main__info_left_block_item {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 76px;
+	height: 26px;
+	border-radius: 8px;
+	background-color: #147164;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: $white;
+	&.name {
+		font-size: 21px;
+	}
+	&.ratio {
+		font-size: 18px;
+	}
+	&:before {
+		content: '';
+		position: absolute;
+		top: 50%;
+		right: 0;
+		transform: translate(100%, -50%);
+		width: 62px;
+		height: 5px;
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='62' height='5' viewBox='0 0 62 5'%3E%3Cg%3E%3Cg%3E%3Cpath d='M59.5 4.5a2 2 0 1 0 0-4 2 2 0 0 0 0 4z'/%3E%3C/g%3E%3Cg%3E%3Cpath fill='none' stroke='%23000' stroke-dasharray='2 2' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='50' d='M.5 2.5H55'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+	}
+}
+
+.main__info_right {
+	margin-left: 60px;
+	padding-top: 5px;
+}
+
+.main__info_right {}
+
+.main__info_colors {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+}
+
+.main__info_colors_item {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 40px;
+	height: 40px;
+	margin-right: 15px;
+	font-weight: bold;
+	color: $white;
+}
+
+.main__placing {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.main__placing_btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1em 1.2em;
+	background-color: $main;
+	font-weight: 500;
+	font-size: 18px;
+	color: $white;
+	transition: .3s;
+	&:hover {
+		background-color: #0073e6;
+		color: $white;
+	}
+}
