--- a/src/templates/main/main.scss
+++ b/src/templates/main/main.scss
@@ -1,458 +1,3 @@
-.chart {
-	display: grid;
-	grid-template-columns: repeat(7, 1fr);
-	grid-gap: 8px;
-	grid-template-areas:
-		'block-1 block-1 block-1 block-2 block-2 block-2 block-2'
-		'block-1 block-1 block-1 block-3 block-3 block-3 block-3'
-	;
-}
-
-.chart__block {
-	padding: 8px;
-	background: #eff2f9;
-}
-
-.chart__block-1 {
-	grid-area: block-1;
-}
-
-.chart__block-2 {
-	grid-area: block-2;
-}
-
-.chart__block-3 {
-	grid-area: block-3;
-}
-
-.chart__block_label {
-	padding-bottom: 8px;
-	font-weight: 500;
-	text-transform: uppercase;
-	span {
-		font-size: 12px;
-		text-transform: none;
-	}
-}
-
-.chart__block_grid {
-	display: grid;
-}
-
-.chart__block_grid-1 {
-	height: 700px;
-	grid-template-columns: repeat(25, 1fr);
-	grid-template-rows: repeat(46, 1fr);
-	grid-gap: 3px;
-	grid-template-areas:
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-3 a-3 a-3"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-3 a-3 a-3"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-3 a-3 a-3"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-4 a-4 a-4"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-4 a-4 a-4"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-2 a-5 a-5 a-5"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7"
-		"a-8 a-8 a-8 a-8 a-8 a-9 a-9 a-9 a-9 a-9 a-9 a-9 a-9 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12"
-		"a-8 a-8 a-8 a-8 a-8 a-9 a-9 a-9 a-9 a-9 a-9 a-9 a-9 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12"
-		"a-8 a-8 a-8 a-8 a-8 a-9 a-9 a-9 a-9 a-9 a-9 a-9 a-9 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12"
-		"a-8 a-8 a-8 a-8 a-8 a-9 a-9 a-9 a-9 a-9 a-9 a-9 a-9 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12"
-		"a-8 a-8 a-8 a-8 a-8 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12"
-		"a-8 a-8 a-8 a-8 a-8 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12"
-		"a-8 a-8 a-8 a-8 a-8 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12"
-		"a-8 a-8 a-8 a-8 a-8 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12"
-		"a-8 a-8 a-8 a-8 a-8 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-12"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-14 a-14 a-14 a-15 a-15 a-15 a-15 a-15 a-15 a-15"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-14 a-14 a-14 a-15 a-15 a-15 a-15 a-15 a-15 a-15"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-14 a-14 a-14 a-15 a-15 a-15 a-15 a-15 a-15 a-15"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-14 a-14 a-14 a-15 a-15 a-15 a-15 a-15 a-15 a-15"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-16 a-16 a-16 a-16 a-16 a-16 a-16 a-17 a-17 a-17 a-17 a-17"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-16 a-16 a-16 a-16 a-16 a-16 a-16 a-17 a-17 a-17 a-17 a-17"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-16 a-16 a-16 a-16 a-16 a-16 a-16 a-17 a-17 a-17 a-17 a-17"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-16 a-16 a-16 a-16 a-16 a-16 a-16 a-17 a-17 a-17 a-17 a-17"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18 a-18"
-		"a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-13 a-20 a-20 a-20 a-20 a-21 a-21 a-21 a-21 a-22 a-22 a-22 a-22"
-		"a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-20 a-20 a-20 a-20 a-21 a-21 a-21 a-21 a-22 a-22 a-22 a-22"
-		"a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-20 a-20 a-20 a-20 a-21 a-21 a-21 a-21 a-22 a-22 a-22 a-22"
-		"a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-20 a-20 a-20 a-20 a-21 a-21 a-21 a-21 a-22 a-22 a-22 a-22"
-		"a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-20 a-20 a-20 a-20 a-21 a-21 a-21 a-21 a-22 a-22 a-22 a-22"
-		"a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-23 a-23 a-23 a-23 a-23 a-23 a-24 a-24 a-24 a-25 a-25 a-25"
-		"a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-23 a-23 a-23 a-23 a-23 a-23 a-24 a-24 a-24 a-25 a-25 a-25"
-		"a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-23 a-23 a-23 a-23 a-23 a-23 a-24 a-24 a-24 a-25 a-25 a-25"
-		"a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-23 a-23 a-23 a-23 a-23 a-23 a-26 a-26 a-26 a-27 a-27 a-28"
-		"a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-19 a-23 a-23 a-23 a-23 a-23 a-23 a-26 a-26 a-26 a-27 a-27 a-29"
-	;
-	.chart__block_grid_item {
-		&:nth-child(1) {
-			grid-area: a-1;
-		}
-		&:nth-child(2) {
-			grid-area: a-2;
-		}
-		&:nth-child(3) {
-			grid-area: a-3;
-		}
-		&:nth-child(4) {
-			grid-area: a-4;
-		}
-		&:nth-child(5) {
-			grid-area: a-5;
-		}
-		&:nth-child(6) {
-			grid-area: a-6;
-		}
-		&:nth-child(7) {
-			grid-area: a-7;
-		}
-		&:nth-child(8) {
-			grid-area: a-8;
-		}
-		&:nth-child(9) {
-			grid-area: a-9;
-		}
-		&:nth-child(10) {
-			grid-area: a-10;
-		}
-		&:nth-child(11) {
-			grid-area: a-11;
-		}
-		&:nth-child(12) {
-			grid-area: a-12;
-		}
-		&:nth-child(13) {
-			grid-area: a-13;
-		}
-		&:nth-child(14) {
-			grid-area: a-14;
-		}
-		&:nth-child(15) {
-			grid-area: a-15;
-		}
-		&:nth-child(16) {
-			grid-area: a-16;
-		}
-		&:nth-child(17) {
-			grid-area: a-17;
-		}
-		&:nth-child(18) {
-			grid-area: a-18;
-		}
-		&:nth-child(19) {
-			grid-area: a-19;
-		}
-		&:nth-child(20) {
-			grid-area: a-20;
-		}
-		&:nth-child(21) {
-			grid-area: a-21;
-		}
-		&:nth-child(22) {
-			grid-area: a-22;
-		}
-		&:nth-child(23) {
-			grid-area: a-23;
-		}
-		&:nth-child(24) {
-			grid-area: a-24;
-		}
-		&:nth-child(25) {
-			grid-area: a-25;
-		}
-		&:nth-child(26) {
-			grid-area: a-26;
-		}
-		&:nth-child(27) {
-			grid-area: a-27;
-		}
-		&:nth-child(28) {
-			grid-area: a-28;
-		}
-		&:nth-child(29) {
-			grid-area: a-29;
-		}
-	}
-}
-
-.chart__block_grid-2 {
-	height: 340px;
-	grid-template-columns: repeat(30, 1fr);
-	grid-template-rows: repeat(20, 1fr);
-	grid-gap: 3px;
-	grid-template-areas:
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-5 a-5 a-5 a-5 a-5 a-5 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-8 a-8"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-5 a-5 a-5 a-5 a-5 a-5 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-8 a-8"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-5 a-5 a-5 a-5 a-5 a-5 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-8 a-8"
-		"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-5 a-5 a-5 a-5 a-5 a-5 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-8 a-8"
-		"a-2 a-2 a-2 a-2 a-2 a-2 a-3 a-3 a-3 a-3 a-3 a-5 a-5 a-5 a-5 a-5 a-5 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-8 a-8"
-		"a-2 a-2 a-2 a-2 a-2 a-2 a-3 a-3 a-3 a-3 a-3 a-5 a-5 a-5 a-5 a-5 a-5 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-8 a-8"
-		"a-2 a-2 a-2 a-2 a-2 a-2 a-3 a-3 a-3 a-3 a-3 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-8 a-8"
-		"a-2 a-2 a-2 a-2 a-2 a-2 a-3 a-3 a-3 a-3 a-3 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-8 a-8"
-		"a-2 a-2 a-2 a-2 a-2 a-2 a-4 a-4 a-4 a-4 a-4 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-8 a-8"
-		"a-2 a-2 a-2 a-2 a-2 a-2 a-4 a-4 a-4 a-4 a-4 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-9 a-9 a-9 a-9 a-9 a-9"
-		"a-2 a-2 a-2 a-2 a-2 a-2 a-4 a-4 a-4 a-4 a-4 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-9 a-9 a-9 a-9 a-9 a-9"
-		"a-2 a-2 a-2 a-2 a-2 a-2 a-4 a-4 a-4 a-4 a-4 a-6 a-6 a-6 a-6 a-6 a-6 a-7 a-7 a-7 a-7 a-7 a-7 a-7 a-9 a-9 a-9 a-9 a-9 a-9"
-		"a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-11 a-11 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-17 a-17 a-17 a-17 a-17 a-17"
-		"a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-11 a-11 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-17 a-17 a-17 a-17 a-17 a-17"
-		"a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-11 a-11 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-17 a-17 a-17 a-17 a-17 a-17"
-		"a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-11 a-11 a-12 a-12 a-12 a-12 a-12 a-12 a-12 a-17 a-17 a-17 a-17 a-17 a-17"
-		"a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-11 a-11 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-17 a-17 a-17 a-17 a-17 a-17"
-		"a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-11 a-11 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-17 a-17 a-17 a-17 a-17 a-17"
-		"a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-11 a-11 a-13 a-13 a-13 a-13 a-13 a-15 a-16 a-17 a-17 a-17 a-17 a-17 a-17"
-		"a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-11 a-11 a-11 a-11 a-11 a-11 a-13 a-13 a-13 a-13 a-13 a-15 a-16 a-17 a-17 a-17 a-17 a-17 a-17"
-	;
-	.chart__block_grid_item {
-		&:nth-child(1) {
-			grid-area: a-1;
-		}
-		&:nth-child(2) {
-			grid-area: a-2;
-		}
-		&:nth-child(3) {
-			grid-area: a-3;
-		}
-		&:nth-child(4) {
-			grid-area: a-4;
-		}
-		&:nth-child(5) {
-			grid-area: a-5;
-		}
-		&:nth-child(6) {
-			grid-area: a-6;
-		}
-		&:nth-child(7) {
-			grid-area: a-7;
-		}
-		&:nth-child(8) {
-			grid-area: a-8;
-		}
-		&:nth-child(9) {
-			grid-area: a-9;
-		}
-		&:nth-child(10) {
-			grid-area: a-10;
-		}
-		&:nth-child(11) {
-			grid-area: a-11;
-		}
-		&:nth-child(12) {
-			grid-area: a-12;
-		}
-		&:nth-child(13) {
-			grid-area: a-13;
-		}
-		&:nth-child(14) {
-			grid-area: a-14;
-		}
-		&:nth-child(15) {
-			grid-area: a-15;
-		}
-		&:nth-child(16) {
-			grid-area: a-16;
-		}
-		&:nth-child(17) {
-			grid-area: a-17;
-		}
-	}
-}
-
-.chart__block_grid-3 {
-	height: 303px;
-	grid-template-columns: repeat(29, 1fr);
-	grid-template-rows: repeat(19, 1fr);
-	grid-gap: 3px;
-	grid-template-areas:
-			"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-5 a-5 a-5 a-5 a-5 a-5 a-6 a-6 a-6 a-6 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10"
-			"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-5 a-5 a-5 a-5 a-5 a-5 a-6 a-6 a-6 a-6 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10"
-			"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-5 a-5 a-5 a-5 a-5 a-5 a-6 a-6 a-6 a-6 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10"
-			"a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-1 a-5 a-5 a-5 a-5 a-5 a-5 a-6 a-6 a-6 a-6 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10"
-			"a-2 a-2 a-2 a-2 a-2 a-2 a-3 a-3 a-3 a-3 a-3 a-5 a-5 a-5 a-5 a-5 a-5 a-6 a-6 a-6 a-6 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10"
-			"a-2 a-2 a-2 a-2 a-2 a-2 a-3 a-3 a-3 a-3 a-3 a-5 a-5 a-5 a-5 a-5 a-5 a-6 a-6 a-6 a-6 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10"
-			"a-2 a-2 a-2 a-2 a-2 a-2 a-3 a-3 a-3 a-3 a-3 a-5 a-5 a-5 a-5 a-5 a-5 a-6 a-6 a-6 a-6 a-10 a-10 a-10 a-10 a-10 a-10 a-10 a-10"
-			"a-2 a-2 a-2 a-2 a-2 a-2 a-3 a-3 a-3 a-3 a-3 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-11 a-11 a-11 a-11 a-11 a-11 a-11 a-11"
-			"a-2 a-2 a-2 a-2 a-2 a-2 a-4 a-4 a-4 a-4 a-4 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-11 a-11 a-11 a-11 a-11 a-11 a-11 a-11"
-			"a-2 a-2 a-2 a-2 a-2 a-2 a-4 a-4 a-4 a-4 a-4 a-7 a-7 a-7 a-7 a-7 a-7 a-8 a-8 a-8 a-8 a-11 a-11 a-11 a-11 a-11 a-11 a-11 a-11"
-			"a-2 a-2 a-2 a-2 a-2 a-2 a-4 a-4 a-4 a-4 a-4 a-7 a-7 a-7 a-7 a-7 a-7 a-9 a-9 a-9 a-9 a-11 a-11 a-11 a-11 a-11 a-11 a-11 a-11"
-			"a-2 a-2 a-2 a-2 a-2 a-2 a-4 a-4 a-4 a-4 a-4 a-7 a-7 a-7 a-7 a-7 a-7 a-9 a-9 a-9 a-9 a-11 a-11 a-11 a-11 a-11 a-11 a-11 a-11"
-			"a-2 a-2 a-2 a-2 a-2 a-2 a-4 a-4 a-4 a-4 a-4 a-7 a-7 a-7 a-7 a-7 a-7 a-9 a-9 a-9 a-9 a-11 a-11 a-11 a-11 a-11 a-11 a-11 a-11"
-			"a-12 a-12 a-12 a-12 a-12 a-12 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-14 a-14 a-14 a-14 a-15 a-15 a-15 a-15 a-17 a-17 a-17 a-17 a-18 a-18 a-18 a-18"
-			"a-12 a-12 a-12 a-12 a-12 a-12 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-14 a-14 a-14 a-14 a-15 a-15 a-15 a-15 a-17 a-17 a-17 a-17 a-18 a-18 a-18 a-18"
-			"a-12 a-12 a-12 a-12 a-12 a-12 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-14 a-14 a-14 a-14 a-15 a-15 a-15 a-15 a-17 a-17 a-17 a-17 a-18 a-18 a-18 a-18"
-			"a-12 a-12 a-12 a-12 a-12 a-12 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-14 a-14 a-14 a-14 a-16 a-16 a-16 a-16 a-17 a-17 a-17 a-17 a-18 a-18 a-18 a-18"
-			"a-12 a-12 a-12 a-12 a-12 a-12 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-14 a-14 a-14 a-14 a-16 a-16 a-16 a-16 a-17 a-17 a-17 a-17 a-18 a-18 a-18 a-18"
-			"a-12 a-12 a-12 a-12 a-12 a-12 a-13 a-13 a-13 a-13 a-13 a-14 a-14 a-14 a-14 a-14 a-14 a-16 a-16 a-16 a-16 a-17 a-17 a-17 a-17 a-18 a-18 a-18 a-18"
-;
-	.chart__block_grid_item {
-		&:nth-child(1) {
-			grid-area: a-1;
-		}
-		&:nth-child(2) {
-			grid-area: a-2;
-		}
-		&:nth-child(3) {
-			grid-area: a-3;
-		}
-		&:nth-child(4) {
-			grid-area: a-4;
-		}
-		&:nth-child(5) {
-			grid-area: a-5;
-		}
-		&:nth-child(6) {
-			grid-area: a-6;
-		}
-		&:nth-child(7) {
-			grid-area: a-7;
-		}
-		&:nth-child(8) {
-			grid-area: a-8;
-		}
-		&:nth-child(9) {
-			grid-area: a-9;
-		}
-		&:nth-child(10) {
-			grid-area: a-10;
-		}
-		&:nth-child(11) {
-			grid-area: a-11;
-		}
-		&:nth-child(12) {
-			grid-area: a-12;
-		}
-		&:nth-child(13) {
-			grid-area: a-13;
-		}
-		&:nth-child(14) {
-			grid-area: a-14;
-		}
-		&:nth-child(15) {
-			grid-area: a-15;
-		}
-		&:nth-child(16) {
-			grid-area: a-16;
-		}
-		&:nth-child(17) {
-			grid-area: a-17;
-		}
-		&:nth-child(18) {
-			grid-area: a-18;
-		}
-	}
-}
-
-.main__info {
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-	margin-bottom: 2em;
-	padding: 2em 0;
-	border-bottom: 1px solid $main;
-}
-
-.main__info_label {
-	padding: 7px 0;
-	font-size: 14px;
-}
-
-.main__info_left {
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-}
-
-.main__info_left_block {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-	width: 135px;
-	height: 80px;
-	margin-right: 40px;
-	padding: 5px;
-	background-color: $age-3;
-}
-
-.main__info_left_block_item {
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 76px;
-	height: 26px;
-	border-radius: 8px;
-	background-color: #147164;
-	font-weight: bold;
-	text-transform: uppercase;
-	color: $white;
-	&.name {
-		font-size: 21px;
-	}
-	&.ratio {
-		font-size: 18px;
-	}
-	&:before {
-		content: '';
-		position: absolute;
-		top: 50%;
-		right: 0;
-		transform: translate(100%, -50%);
-		width: 62px;
-		height: 5px;
-		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='62' height='5' viewBox='0 0 62 5'%3E%3Cg%3E%3Cg%3E%3Cpath d='M59.5 4.5a2 2 0 1 0 0-4 2 2 0 0 0 0 4z'/%3E%3C/g%3E%3Cg%3E%3Cpath fill='none' stroke='%23000' stroke-dasharray='2 2' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='50' d='M.5 2.5H55'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-	}
-}
-
-.main__info_right {
-	margin-left: 60px;
-	padding-top: 5px;
-}
-
-.main__info_right {}
-
-.main__info_colors {
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-}
-
-.main__info_colors_item {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 40px;
-	height: 40px;
-	margin-right: 15px;
-	font-weight: bold;
-	color: $white;
-}
-
-.main__placing {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.main__placing_btn {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding: 1em 1.2em;
-	background-color: $main;
-	font-weight: 500;
-	font-size: 18px;
-	color: $white;
-	transition: .3s;
-	&:hover {
-		background-color: #0073e6;
-		color: $white;
-	}
-}
+@import "chart/chart";
+@import "chart-table/chart-table";
+@import "info/info";
