Добавив collapse в меню для табличної версії чарту.

--- a/src/templates/main/chart-table/chart-table.html
+++ b/src/templates/main/chart-table/chart-table.html
@@ -1,49 +1,113 @@
 <div class="chart-table">
 
     <div class="chart-table__block">
-        <div class="chart-table__block_menu">
+        <div class="chart-table__block_menu collapsed" data-toggle="collapse" data-target="#chartTableMenuCollapse-1" aria-expanded="false" aria-controls="chartTableMenuCollapse-1">
             <div class="chart-table__block_menu_label">Услуги <span>(56 котировок)</span></div>
+            <div class="chart-table__block_menu_dropdown">
+                <div class="chart-table__block_menu_dropdown_text"></div>
+                <div class="chart-table__block_menu_arrow"></div>
+            </div>
+        </div>
+        <div class="collapse" id="chartTableMenuCollapse-1">
+            <ul class="chart-table__subgroup">
+                <li class="chart-table__subgroup_item">
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                </li>
+                <li class="chart-table__subgroup_item">
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                </li>
+                <li class="chart-table__subgroup_item">
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                </li>
+                <li class="chart-table__subgroup_item">
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                </li>
+                <li class="chart-table__subgroup_item">
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                </li>
+                <li class="chart-table__subgroup_item">
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                </li>
+                <li class="chart-table__subgroup_item">
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                </li>
+                <li class="chart-table__subgroup_item">
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                </li>
+            </ul>
         </div>
         <ul class="chart-table__block_list">
             <li class="chart-table__block_list_item">
                 <div class="chart-table__block_list_item_age bg-age-4">ADF</div>
                 <div class="chart-table__block_list_item_name">Соляные комнаты «Солти»</div>
-                <div class="chart-table__block_list_item_ratio">1000</div>
+                <div class="chart-table__block_list_item_ratio">
+                    1000
+                    <span class="ratio-up"></span>
+                </div>
                 <div class="chart-table__block_list_item_chart">
                     <img src="../../../assets/img/chart-1.png" alt="">
                 </div>
                 <div class="chart-table__block_list_item_position">Позиция: 10</div>
-                <div class="chart-table__block_list_item_change">3</div>
+                <div class="chart-table__block_list_item_change">
+                    3
+                    <span class="chart-table__block_list_item_change_arrow">
+                        <img src="../../../assets/img/icons/up.png" alt="">
+                    </span>
+                </div>
             </li>
             <li class="chart-table__block_list_item">
                 <div class="chart-table__block_list_item_age bg-age-3">FX</div>
                 <div class="chart-table__block_list_item_name">Полное название</div>
-                <div class="chart-table__block_list_item_ratio">1000</div>
+                <div class="chart-table__block_list_item_ratio">
+                    1000
+                    <span class="ratio-down"></span>
+                </div>
                 <div class="chart-table__block_list_item_chart">
                     <img src="../../../assets/img/chart-2.png" alt="">
                 </div>
                 <div class="chart-table__block_list_item_position">Позиция: 10</div>
-                <div class="chart-table__block_list_item_change">3</div>
+                <div class="chart-table__block_list_item_change">
+                    3
+                    <span class="chart-table__block_list_item_change_arrow">
+                        <img src="../../../assets/img/icons/down.png" alt="">
+                    </span>
+                </div>
             </li>
             <li class="chart-table__block_list_item">
                 <div class="chart-table__block_list_item_age bg-age-2">ADF</div>
                 <div class="chart-table__block_list_item_name">Соляные комнаты «Солти»</div>
-                <div class="chart-table__block_list_item_ratio">1000</div>
+                <div class="chart-table__block_list_item_ratio">
+                    1000
+                    <span class="ratio-up"></span>
+                </div>
                 <div class="chart-table__block_list_item_chart">
                     <img src="../../../assets/img/chart-1.png" alt="">
                 </div>
                 <div class="chart-table__block_list_item_position">Позиция: 10</div>
-                <div class="chart-table__block_list_item_change">3</div>
+                <div class="chart-table__block_list_item_change">
+                    3
+                    <span class="chart-table__block_list_item_change_arrow">
+                        <img src="../../../assets/img/icons/up.png" alt="">
+                    </span>
+                </div>
             </li>
             <li class="chart-table__block_list_item">
                 <div class="chart-table__block_list_item_age bg-age-1">FX</div>
                 <div class="chart-table__block_list_item_name">Полное название</div>
-                <div class="chart-table__block_list_item_ratio">1000</div>
+                <div class="chart-table__block_list_item_ratio">
+                    1000
+                    <span class="ratio-down"></span>
+                </div>
                 <div class="chart-table__block_list_item_chart">
                     <img src="../../../assets/img/chart-2.png" alt="">
                 </div>
                 <div class="chart-table__block_list_item_position">Позиция: 10</div>
-                <div class="chart-table__block_list_item_change">3</div>
+                <div class="chart-table__block_list_item_change">
+                    3
+                    <span class="chart-table__block_list_item_change_arrow">
+                        <img src="../../../assets/img/icons/down.png" alt="">
+                    </span>
+                </div>
             </li>
         </ul>
     </div>
