--- a/src/assets/sass/customs/customs.scss
+++ b/src/assets/sass/customs/customs.scss
@@ -24,3 +24,21 @@
 	height: 180px;
 	cursor: pointer;
 }
+
+.ratio-up {
+	width: 0;
+	height: 0;
+	margin-left: 5px;
+	border-style: solid;
+	border-width: 0 6px 10px 6px;
+	border-color: transparent transparent #c1f6d4 transparent;
+}
+
+.ratio-down {
+	width: 0;
+	height: 0;
+	margin-left: 5px;
+	border-style: solid;
+	border-width: 10px 6px 0 6px;
+	border-color: #ffc0c7 transparent transparent transparent;
+}
