Для табличної версії добавив кастомний скролл і можливість згортання/розгортання всіх пунктів.

--- a/src/templates/main/chart-table/chart-table.html
+++ b/src/templates/main/chart-table/chart-table.html
@@ -11,28 +11,28 @@
         <div class="collapse" id="chartTableMenuCollapse-1">
             <ul class="chart-table__subgroup">
                 <li class="chart-table__subgroup_item">
-                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа-1</a>
                 </li>
                 <li class="chart-table__subgroup_item">
-                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа-2</a>
                 </li>
                 <li class="chart-table__subgroup_item">
-                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа-3</a>
                 </li>
                 <li class="chart-table__subgroup_item">
-                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа-4</a>
                 </li>
                 <li class="chart-table__subgroup_item">
-                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа-5</a>
                 </li>
                 <li class="chart-table__subgroup_item">
-                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа-6</a>
                 </li>
                 <li class="chart-table__subgroup_item">
-                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа-7</a>
                 </li>
                 <li class="chart-table__subgroup_item">
-                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа</a>
+                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа-8</a>
                 </li>
             </ul>
         </div>
@@ -109,7 +109,82 @@
                     </span>
                 </div>
             </li>
+            <li class="chart-table__block_list_item">
+                <div class="chart-table__block_list_item_age bg-age-4">ADF</div>
+                <div class="chart-table__block_list_item_name">Соляные комнаты «Солти»</div>
+                <div class="chart-table__block_list_item_ratio">
+                    1000
+                    <span class="ratio-up"></span>
+                </div>
+                <div class="chart-table__block_list_item_chart">
+                    <img src="../../../assets/img/chart-1.png" alt="">
+                </div>
+                <div class="chart-table__block_list_item_position">Позиция: 10</div>
+                <div class="chart-table__block_list_item_change">
+                    3
+                    <span class="chart-table__block_list_item_change_arrow">
+                        <img src="../../../assets/img/icons/up.png" alt="">
+                    </span>
+                </div>
+            </li>
+            <li class="chart-table__block_list_item">
+                <div class="chart-table__block_list_item_age bg-age-3">FX</div>
+                <div class="chart-table__block_list_item_name">Полное название</div>
+                <div class="chart-table__block_list_item_ratio">
+                    1000
+                    <span class="ratio-down"></span>
+                </div>
+                <div class="chart-table__block_list_item_chart">
+                    <img src="../../../assets/img/chart-2.png" alt="">
+                </div>
+                <div class="chart-table__block_list_item_position">Позиция: 10</div>
+                <div class="chart-table__block_list_item_change">
+                    3
+                    <span class="chart-table__block_list_item_change_arrow">
+                        <img src="../../../assets/img/icons/down.png" alt="">
+                    </span>
+                </div>
+            </li>
+            <li class="chart-table__block_list_item">
+                <div class="chart-table__block_list_item_age bg-age-2">ADF</div>
+                <div class="chart-table__block_list_item_name">Соляные комнаты «Солти»</div>
+                <div class="chart-table__block_list_item_ratio">
+                    1000
+                    <span class="ratio-up"></span>
+                </div>
+                <div class="chart-table__block_list_item_chart">
+                    <img src="../../../assets/img/chart-1.png" alt="">
+                </div>
+                <div class="chart-table__block_list_item_position">Позиция: 10</div>
+                <div class="chart-table__block_list_item_change">
+                    3
+                    <span class="chart-table__block_list_item_change_arrow">
+                        <img src="../../../assets/img/icons/up.png" alt="">
+                    </span>
+                </div>
+            </li>
+            <li class="chart-table__block_list_item">
+                <div class="chart-table__block_list_item_age bg-age-1">FX</div>
+                <div class="chart-table__block_list_item_name">Полное название</div>
+                <div class="chart-table__block_list_item_ratio">
+                    1000
+                    <span class="ratio-down"></span>
+                </div>
+                <div class="chart-table__block_list_item_chart">
+                    <img src="../../../assets/img/chart-2.png" alt="">
+                </div>
+                <div class="chart-table__block_list_item_position">Позиция: 10</div>
+                <div class="chart-table__block_list_item_change">
+                    3
+                    <span class="chart-table__block_list_item_change_arrow">
+                        <img src="../../../assets/img/icons/down.png" alt="">
+                    </span>
+                </div>
+            </li>
         </ul>
+        <a href="/" class="chart-table__block_list_all">
+            <span class="chart-table__block_list_all_arrow"></span>
+        </a>
     </div>
     <!-- /.chart-table__block -->
 
