--- a/src/assets/sass/customs/_slider.scss
+++ b/src/assets/sass/customs/_slider.scss
@@ -58,14 +58,14 @@
 	}
 }
 .slick-prev {
-	left: 50px;
+	left: 0;
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg%3E%3Cg opacity='.4'%3E%3Cpath d='M11.734 0l2.052 2.072-8.207 8.287h17.88v2.96H5.58l8.207 8.286-2.052 2.072L.01 11.84z'/%3E%3Cpath fill='%23fff' d='M11.734 0l2.052 2.072-8.207 8.287h17.88v2.96H5.58l8.207 8.286-2.052 2.072L.01 11.84z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 	&:hover {
 		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg%3E%3Cg opacity='1'%3E%3Cpath d='M11.734 0l2.052 2.072-8.207 8.287h17.88v2.96H5.58l8.207 8.286-2.052 2.072L.01 11.84z'/%3E%3Cpath fill='%23c04838' d='M11.734 0l2.052 2.072-8.207 8.287h17.88v2.96H5.58l8.207 8.286-2.052 2.072L.01 11.84z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 	}
 }
 .slick-next {
-	right: 50px;
+	right: 0;
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg%3E%3Cg opacity='.4'%3E%3Cpath d='M12.336.455l-2.04 2.06 8.159 8.237H.682v2.942h17.773l-8.158 8.237 2.04 2.06L23.99 12.223z'/%3E%3Cpath fill='%23fff' d='M12.336.455l-2.04 2.06 8.159 8.237H.682v2.942h17.773l-8.158 8.237 2.04 2.06L23.99 12.223z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 	&:hover {
 		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg%3E%3Cg opacity='1'%3E%3Cpath d='M12.336.455l-2.04 2.06 8.159 8.237H.682v2.942h17.773l-8.158 8.237 2.04 2.06L23.99 12.223z'/%3E%3Cpath fill='%23c04838' d='M12.336.455l-2.04 2.06 8.159 8.237H.682v2.942h17.773l-8.158 8.237 2.04 2.06L23.99 12.223z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
